k8s/10-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: learn-kubernetes
  labels:
    name: learn-kubernetes
---
