k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learn-kubernetes
  namespace: learn-kubernetes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learn-kubernetes
  template:
    metadata:
      labels:
        app: learn-kubernetes
    spec:
      containers:
        - name: learn-kubernetes
          image: gitea.homelab.leuchtstark.dev/marco/learn-kubernetes:main
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
