k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: learn-kubernetes
  namespace: learn-kubernetes
spec:
  selector:
    app: learn-kubernetes
  ports:
    - port: 80
      targetPort: 5000
  type: LoadBalancer
