k8s/50-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: learn-kubernetes-ingress
  namespace: learn-kubernetes
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: cluster.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: learn-kubernetes
            port:
              number: 80
---
